mypy kinda works, upgrade to 0.4.7

--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -1,8 +1,6 @@
 [mypy]
-# show_error_contexts=True
 show_column_numbers = True
-# follow_imports = silent
-silent_imports=True
+follow_imports = silent
 fast_parser = True
 warn_no_return = True
 warn_incomplete_stub = True
@@ -14,5 +12,3 @@ strict_optional = True
 # --disallow-untyped-calls
 # --check-untyped-defs
 # --disallow-untyped-defs
-
-# TODO: look into strict_optional
