Switch to normal imports

--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 show_column_numbers = True
-follow_imports = silent
+follow_imports = normal
 fast_parser = True
 warn_no_return = True
 warn_incomplete_stub = True
