--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -1,12 +1,13 @@
 [mypy]
 show_column_numbers = True
-follow_imports = normal
+follow_imports = silent
 fast_parser = True
 warn_no_return = True
 warn_incomplete_stub = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 strict_optional = True
+disallow_untyped_calls = True
 
 # TODO: in order
 # --disallow-untyped-calls
