Type check everything

--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
+mypy_path = mypystubs
 show_column_numbers = True
 follow_imports = silent
 fast_parser = True
@@ -8,8 +9,6 @@ warn_redundant_casts = True
 warn_unused_ignores = True
 strict_optional = True
 disallow_untyped_calls = True
-
-# TODO: in order
-# --disallow-untyped-calls
-# --check-untyped-defs
-# --disallow-untyped-defs
+check_untyped_defs = True
+incremental = True
+# disallow_untyped_defs = True
