--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 mypy_path = mypystubs
 show_column_numbers = True
-follow_imports = silent
+follow_imports = normal
 fast_parser = True
 warn_no_return = True
 warn_incomplete_stub = True
@@ -11,4 +11,6 @@ strict_optional = True
 disallow_untyped_calls = True
 check_untyped_defs = True
 incremental = True
-# disallow_untyped_defs = True
+
+[mypy-server.*,dark.*,fns.*,node.*,datastore.*,graph.*,fields.*]
+disallow_untyped_defs = True
