In order to turn static analysis off on fns, we need to fix the file structure to be a proper module.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /appdata
-server/static/elm.js
-server/static/elm-stuff/
-server/__pycache__/
+/static/elm.js
+/static/elm-stuff/
+/__pycache__/
 client/elm-stuff/
 server/.mypy_cache/
-.mypy_cache
+*.pyc
