--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -12,5 +12,7 @@ disallow_untyped_calls = True
 check_untyped_defs = True
 incremental = True
 
-[mypy-server.*,dark.*,fns.*,node.*,datastore.*,graph.*,fields.*]
+[mypy-server.*]
 disallow_untyped_defs = True
+
+[mypy-server.fns]
