Untypecheck fns.py - we're gonna need something custom

--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -10,9 +10,11 @@ warn_unused_ignores = True
 strict_optional = True
 disallow_untyped_calls = True
 check_untyped_defs = True
+show_none_errors = True
 incremental = True
 
-[mypy-server.*]
+[mypy-server.dark.*]
 disallow_untyped_defs = True
 
-[mypy-server.fns]
+[mypy-dark.fns]
+ignore_errors = True
