Make sure every function is typechecked

--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -14,7 +14,10 @@ check_untyped_defs = True
 show_none_errors = True
 incremental = True
 
-[mypy-server.dark.*]
+[mypy-dark.*]
+disallow_untyped_defs = True
+
+[mypy-main.*]
 disallow_untyped_defs = True
 
 [mypy-dark.fns]
