--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -2,6 +2,7 @@
 python_version = 3.6
 mypy_path = mypystubs
 show_column_numbers = True
+hide_error_context = False
 follow_imports = normal
 fast_parser = True
 warn_no_return = True
@@ -10,6 +11,7 @@ warn_redundant_casts = True
 warn_unused_ignores = True
 strict_optional = True
 disallow_untyped_calls = True
+disallow_subclassing_any = True
 check_untyped_defs = True
 show_none_errors = True
 incremental = True
