--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /client/tests/elm-stuff
 /server/_build
 /server/*.byte
+/server/*.native
 /server/dark.install
 /server/static/elm.js
 /server/appdata/*.dark
