--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /server/cache
 /server/ocamlbuild_output.txt
 /server/profile.json
+/client/tests/DarkTestData.elm
+/server/bin/convert_to_graph.ml
+/server/testdata/*.dark
