Add build-essentials for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get install build-essentials
+
 
       # fswatch
       - run:
