--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get install build-essentials
+            apk add build-base
 
 
       # fswatch
