--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             cd fswatch-1.10.0
             ./configure
             make
-            sudo make install
+            make install
 
 
       - setup_remote_docker
@@ -36,7 +36,7 @@ jobs:
             VER="17.03.0-ce"
             curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            sudo mv -f /tmp/docker/* /usr/bin
+            mv -f /tmp/docker/* /usr/bin
 
       - run: scripts/builder --compile
 
