--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,14 +29,23 @@ jobs:
       - setup_remote_docker
 
       # This should go into custom primary image, here's only for the sake of explanation
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv -f /tmp/docker/* /usr/bin
+      # - run:
+      #     name: Install Docker client
+      #     command: |
+      #       set -x
+      #       VER="17.03.0-ce"
+      #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+      #       mv -f /tmp/docker/* /usr/bin
 
-      - run: scripts/builder --compile
+      - run: scripts/builder --compile --test
+
+      - run:
+          name: Run server
+          background: true
+          working_directory: dark
+          command: |
+            scripts/builder --watch
+
+      - run: integration_tests/run.sh
 
