--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,22 +40,18 @@ jobs:
             cd fswatch-1.10.0
             make install
 
-
-      # This should go into custom primary image, here's only for the sake of explanation
-      # - run:
-      #     name: Install Docker client
-      #     command: |
-      #       set -x
-      #       VER="17.03.0-ce"
-      #       curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-      #       tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-      #       mv -f /tmp/docker/* /usr/bin
-
       - run:
           name: Compile && test
           command: |
             scripts/builder --compile --test
 
+      - save_cache:
+          key: build
+          when: always
+          paths:
+            - client/elm-stuff
+            - client/tests/elm-stuff
+            - server/_build
 
       - run:
           name: Run server
