Add more test ignores and reorder alphabetically

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
-/logs/
+.DS_Store
 /.browser-trigger
 /client/elm-stuff
 /client/tests/elm-stuff
-/server/static/base.css
+/integration-tests/screenshots/*
+/logs/
+/server/*/.merlin
 /server/_build
-/server/*.byte
-/server/*.native
-/server/dark.install
-/server/static/elm.js
 /server/appdata/*.dark
+/server/appdata/*.json
 !/server/appdata/test_*.dark
+!/server/appdata/test_*.json
+/server/backup_appdata/*
 /server/cache
 /server/ocamlbuild_output.txt
 /server/profile.json
-/client/tests/DarkTestData.elm
-.DS_Store
-/tags
-/server/*/.merlin
-/integration-tests/screenshots/*
 /server/requests/*
-/server/backup_appdata/*
+/server/static/base.css
+/server/static/elm.js
+/tags
