--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,16 @@ jobs:
       - restore_cache:
           key: v1-build # our tools are good so we don't need to checksum
 
+      # https://circleci.com/docs/2.0/building-docker-images/#mounting-folders
+      - run:
+          name: Copy in data
+          command: |
+            docker create -v /home/dark/conduit-frontend -v /home/dark/app --name vols alpine:3.4 /bin/true
+            docker cp . vols:/home/dark/app
+            # set the ownership of all this
+            docker run -i --volumes-from vols dark sudo chown -R dark /home/dark/app
+
+
       - run:
           name: Compile && test
           command: |
