We obviously can't run in docker if there's no docker container running

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@ jobs:
           name: Wait for server
           background: true
           command: |
-            until $(./scripts/run-in-docker curl --fail --silent --output /dev/null http://localhost:8000/admin/ui); do
+            while [[ "$(docker ps --last 1 --filter status=running --quiet)" == "" ]]; do
               printf '.'
               sleep 1
             done
