We need to run these in the container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,10 +99,10 @@ jobs:
       - run:
           name: Prep integration tests
           command: |
-            echo "nameserver 127.0.0.1" | cat /etc/resolv.conf > resolv.conf
-            sudo cp resolv.conf /etc/resolv.conf
-            sudo /etc/init.d/postgresql start
-            sudo /etc/init.d/dnsmasq start
+            echo "nameserver 127.0.0.1" | scripts/run-in-docker cat /etc/resolv.conf > resolv.conf
+            cat resolv.conf | scripts/run-in-docker sudo tee -a /etc/resolv.conf
+            scripts/run-in-docker sudo /etc/init.d/postgresql start
+            scripts/run-in-docker sudo /etc/init.d/dnsmasq start
             sleep 10
 
       - run:
