--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,11 +102,10 @@ jobs:
       - run:
           name: Prep integration tests
           command: |
-            echo "nameserver 127.0.0.1" | scripts/run-in-docker cat - /etc/resolv.conf > resolv.conf
-            cat resolv.conf | scripts/run-in-docker sudo tee -a /etc/resolv.conf
             scripts/run-in-docker sudo /etc/init.d/postgresql start
             scripts/run-in-docker sudo /etc/init.d/dnsmasq start
-            sleep 10
+            echo "nameserver 127.0.0.1" | scripts/run-in-docker cat - /etc/resolv.conf | scripts/run-in-docker sudo tee -a /etc/resolv.conf
+            sleep 5
 
       - run: scripts/run-in-docker integration-tests/run.sh
 
