--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,10 @@
 .git
-server/_build
-server/cache
 client/elm-stuff
 client/tests/elm-stuff
+integration-tests/screenshots
 pythonserver
+server/_build
+server/appdata
+server/backup_appdata
+server/cache
+server/events
