--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /.browser-trigger
 /client/elm-stuff
 /client/tests/elm-stuff
+/gcp-builder-dir
 /integration-tests/screenshots/*
 /integration-tests/report.json
 /logs/
