--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /client/elm-stuff
 /client/tests/elm-stuff
 /gcp-builder-dir
+!/gcp-builder-dir/Dockerfile
 /integration-tests/screenshots/*
 /integration-tests/report.json
 /logs/
