Move runtime files, etc, into a separate directory outside server.
This is to allow running a production container locally without contaminating
the dev container's stuff.

The following are all moved to rundir/
- server/cache
- server/requests
- server/events
- server/appdata
- server/backup_appdata

- server/appdata/test_* is now in server/test_appdata

- server/appdata/{conduit,onecalendar}* are now in saved_apps
- server/serialization stayed where it was

--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,15 @@
 !/gcp-builder-dir/Dockerfile
 /integration-tests/screenshots/*
 /integration-tests/report.json
-/logs/
+/rundir
 /server/*/.merlin
 /server/_build
-/server/appdata/*.dark
-/server/appdata/*.json
-!/server/appdata/test_*.dark
-!/server/appdata/test_*.json
-/server/appdata/completed_tests/*
-/server/backup_appdata/*
-/server/cache
+!/server/test_appdata/test_*.dark
+!/server/test_appdata/test_*.json
+/server/test_appdata/completed_tests/*
 /server/ocamlbuild_output.txt
 /server/profile.json
-/server/requests/*
-/server/events/*
+/server/serialization
 /server/static/base.css
 /server/static/elm.js
 /tags
-*.native
