--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /integration-tests/screenshots/*
 /integration-tests/report.json
 /rundir
+/persistdir
 /server/*/.merlin
 /server/_build
 !/server/test_appdata/test_*.dark
