--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,11 +67,13 @@ jobs:
 
       - run: scripts/builder --compile --test
 
+      - run: mkdir artifacts
+
       - run:
           name: Copy out artifacts
           when: always
           command: |
-            docker cp vols:/home/dark/app/logs test-logs
+            docker cp vols:/home/dark/app/persistdir artifacts/persistdir1
 
       - run:
           name: Copy out caches
@@ -104,14 +106,9 @@ jobs:
           name: Copy out artifacts
           when: always
           command: |
-            docker cp vols:/home/dark/app/integration-tests/screenshots integration-tests/screenshots
-            docker cp vols:/home/dark/app/logs integration-tests/logs
+            docker cp vols:/home/dark/app/persistdir artifacts/persistdir2
+            docker cp vols:/home/dark/app/rundir artifacts/rundir
 
       - store_artifacts:
-          path: integration-tests/screenshots
+          path: artifacts
 
-      - store_artifacts:
-          path: integration-tests/logs
-
-      - store_artifacts:
-          path: unit-test-logs
